import Jquery to the source file

--- a/DabangProject/src/index.html
+++ b/DabangProject/src/index.html
@@ -22,7 +22,7 @@
 		<script type="text/javascript" src="js/smooth-scroll.js"></script>
 		<script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
 		<script type="text/javascript" src="js/image-effect.js"></script>
-		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDFZjOV0KA68G2YAh-rn7I3qKqCQEh_Ja0&callback=myMap">
-	    </script>
+		<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDdvOzrPXWAwOyrjhEy6Y4Y2KQ3r4dxtmo"></script>
+		
   </body>
 
